Airflow 추가 - trino 연동테스트 완료

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - ./trino-entrypoint.sh:/trino-entrypoint.sh
     networks:
       - trino-network
+    depends_on:
+      - hive-metastore
     command: /trino-entrypoint.sh
 
   mariadb:
